# iot-device

./: .clang-format  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md
common/: version.h
common/console/: commands.c  console.c  console.h
common/control/: controls.c  controls.h  leds.h  relays.h
common/leds/: leds.c  leds.h
common/logc/: log.c  log.h
common/math/: math_functions.h
common/sensors/: sensors.c  sensors.h
common/sensors/drivers/: bme280.c  bme280.h  bmp280.c  bmp280.h
common/utils/: utils.h
device/: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
device/platform/: at32f435_437_clock.c  vcom.c  vcom.h
device/src/: main.c
device/src/control/: leds.c
device/src/interface/: vcom_console.c  vcom_console.h
device/src/platform/: at32f435_437_board.c  at32f435_437_board.h  at32f435_437_clock.h  at32f435_437_conf.h  at32f435_437_int.c  at32f435_437_int.h  platform.c  platform.h  usb_conf.h  utils.c  utils.h  vcom.c  vcom.h
device/src/sensors/: bme280_spi.c  bme280_spi.h  bmp280_spi.c  bmp280_spi.h
device/vscode_templates/: cmake-kits.json  launch.json  settings.json
host/: .gitignore  CMakeLists.txt  main.c  run_tests.sh
host/src/: main.c  main.cpp  version.h
host/src/console/: console.c  console.h
host/src/control/: leds.c
host/src/interface/: pipe_console.c  pipe_console.h
host/src/leds/: leds.h
host/src/tests/: bmp280_test.cpp  commands_test.cpp  console_test.cpp  math_test.cpp  mock_functions.c  mock_functions.h  sensors_test.cpp
host/src/utils/: utils.c
server/: README.md  iot_server.py  pyproject.toml  run_server.sh  run_tests.sh
server/server/: __init__.py  app.py  iot_device.py  iot_device_test.py  routes.py  routes_test.py
server/web/: index.html  main.js  sensor.js  style.css
server/web_root/: index.html  main.js  style.css
